# DRX_CPP

./: CMakeLists.txt  README.md
data/: 0.01.csv  strainVSstress.gp
include/: drx_grid.h  drx_variables.h  helpers.h
src/: drx.cpp  drx_grid.cpp  drx_old_algo.cpp  main.cpp
